--- a/styles.css
+++ b/styles.css
@@ -22,11 +22,11 @@ header {
     background: rgba(0, 0, 0, 0.1)
 }
 
-header div {
+.links {
     text-align: center;
 }
 
-header div a {
+.links a {
     color: white;
     font-size: 18px;
     line-height: 28px;
@@ -35,7 +35,7 @@ header div a {
     text-decoration: none;
 }
 
-header div a:hover {
+.links a:hover {
     color: var(--color-green);
     transition: color 200ms;
 }
@@ -49,6 +49,7 @@ header div a:hover {
     border-radius: 50%;
     border: 5px solid var(--color-green);
     margin-bottom: 32px;
+    height: 300px;
 }
 
 #wrapper h1 {
@@ -74,4 +75,8 @@ header div a:hover {
 
 #wrapper p a {
     color: var(--color-green);
+}
+
+#links-footer a{
+    border-bottom: 1px solid var(--color-green);
 }
