--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 :root {
     --color-green: #50fa7b;
+    --color-rocket: #7159c1;
 }
 
 * {
@@ -79,4 +80,39 @@ header {
 
 #links-footer a{
     border-bottom: 1px solid var(--color-green);
+}
+
+/*=== CARDS ===*/
+.cards {
+    max-width: 800px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+}
+
+.card {
+    background-color: var(--color-rocket);
+}
+
+.card__image-container img {
+    width:100%;
+}
+
+.card__content,
+.card__info {
+    padding: 24px;
+}
+
+.card__info {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.card__price {
+    background-color: var(--color-rocket);
+    filter: brightness(90%);
+    padding: 5px 20px;
+    border-radius: 20px;
+    text-align: center;
 }
