--- a/styles.css
+++ b/styles.css
@@ -116,3 +116,28 @@ header {
     border-radius: 20px;
     text-align: center;
 }
+
+/* === MODAL === */
+.modal-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+}
+
+.modal {
+    background-color: white;
+    width: 90%;
+    height: 90%;
+    margin: 5vh auto;
+    position: relative;
+}
+
+.modal .close-modal {
+    color: black;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    cursor: pointer;
+}
