--- a/styles.css
+++ b/styles.css
@@ -150,3 +150,10 @@ header {
     opacity: 1;
     visibility: visible;
 }
+
+iframe {
+    width:100%;
+    height:90%;
+    position: absolute;
+    top: 5%;
+}
